Nicolas_Tafur/log/build_2025-08-26_20-07-37/robot/stderr.log
  File "/home/richilzz/ros2_ws/src/git/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/pinterfaz.py", line 432
    self.ros.get_logger().info(f'Cambiado a brazo ' {"izquierdo" if brazo == 3 else "derecho"})
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/home/richilzz/ros2_ws/src/git/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/joint_commander_deg.py", line 124
    self.get_logger().info(f'Nuevo objetivo para brazo {self.brazo_activo}: {target_deg} (actual:
                           ^
SyntaxError: unterminated string literal (detected at line 124)

